--- a/index.html
+++ b/index.html
@@ -21,23 +21,23 @@
       <div class="sidebar">
         <div class="top-icons">
           <div class="link-flex">
-            <img src="./home.png" alt="Home" />
+            <img src="home.png" alt="Home" />
             <a href="#">Home</a>
           </div>
           <div class="link-flex">
-            <img src="./search.png" alt="Search" />
+            <img src="search.png" alt="Search" />
             <a href="#">Search</a>
           </div>
         </div>
         <div class="library">
           <div class="flex-top">
             <div class="link-flex">
-              <img src="./playlist.png" alt="Library" />
+              <img src="playlist.png" alt="Library" />
               <p>Your Library</p>
             </div>
             <div class="link-flex">
-              <img src="./plus (1).png" />
-              <img src="./boxes.png" />
+              <img src="plus (1).png" />
+              <img src="boxes.png" />
             </div>
           </div>
           <div class="link-flex" style="gap: 0.5rem">
@@ -46,110 +46,110 @@
             <div class="chip">Podcasts & Shows</div>
           </div>
           <div class="flex-top">
-            <img src="./search.png" />
+            <img src="search.png" />
             <p>Recents</p>
           </div>
           <div class="albums">
             <div class="link-flex album-flex">
-              <img src="./mix1.jpeg" class="album-cover" />
+              <img src="mix1.jpeg" class="album-cover" />
               <div class="col-flex">
                 <p class="album-name">Workout</p>
                 <p>Playlist &#x2022; Spotify</p>
               </div>
             </div>
             <div class="link-flex album-flex">
-              <img src="./mix1.jpeg" class="album-cover" />
+              <img src="mix1.jpeg" class="album-cover" />
               <div class="col-flex">
                 <p class="album-name">Workout</p>
                 <p>Playlist &#x2022; Spotify</p>
               </div>
             </div>
             <div class="link-flex album-flex">
-              <img src="./mix1.jpeg" class="album-cover" />
+              <img src="mix1.jpeg" class="album-cover" />
               <div class="col-flex">
                 <p class="album-name">Workout</p>
                 <p>Playlist &#x2022; Spotify</p>
               </div>
             </div>
             <div class="link-flex album-flex">
-              <img src="./mix1.jpeg" class="album-cover" />
+              <img src="mix1.jpeg" class="album-cover" />
               <div class="col-flex">
                 <p class="album-name">Workout</p>
                 <p>Playlist &#x2022; Spotify</p>
               </div>
             </div>
             <div class="link-flex album-flex">
-              <img src="./mix1.jpeg" class="album-cover" />
+              <img src="mix1.jpeg" class="album-cover" />
               <div class="col-flex">
                 <p class="album-name">Workout</p>
                 <p>Playlist &#x2022; Spotify</p>
               </div>
             </div>
             <div class="link-flex album-flex">
-              <img src="./mix1.jpeg" class="album-cover" />
+              <img src="mix1.jpeg" class="album-cover" />
               <div class="col-flex">
                 <p class="album-name">Workout</p>
                 <p>Playlist &#x2022; Spotify</p>
               </div>
             </div>
             <div class="link-flex album-flex">
-              <img src="./mix1.jpeg" class="album-cover" />
+              <img src="mix1.jpeg" class="album-cover" />
               <div class="col-flex">
                 <p class="album-name">Workout</p>
                 <p>Playlist &#x2022; Spotify</p>
               </div>
             </div>
             <div class="link-flex album-flex">
-              <img src="./mix1.jpeg" class="album-cover" />
+              <img src="mix1.jpeg" class="album-cover" />
               <div class="col-flex">
                 <p class="album-name">Workout</p>
                 <p>Playlist &#x2022; Spotify</p>
               </div>
             </div>
             <div class="link-flex album-flex">
-              <img src="./mix1.jpeg" class="album-cover" />
+              <img src="mix1.jpeg" class="album-cover" />
               <div class="col-flex">
                 <p class="album-name">Workout</p>
                 <p>Playlist &#x2022; Spotify</p>
               </div>
             </div>
             <div class="link-flex album-flex">
-              <img src="./mix1.jpeg" class="album-cover" />
+              <img src="mix1.jpeg" class="album-cover" />
               <div class="col-flex">
                 <p class="album-name">Workout</p>
                 <p>Playlist &#x2022; Spotify</p>
               </div>
             </div>
             <div class="link-flex album-flex">
-              <img src="./mix1.jpeg" class="album-cover" />
+              <img src="mix1.jpeg" class="album-cover" />
               <div class="col-flex">
                 <p class="album-name">Workout</p>
                 <p>Playlist &#x2022; Spotify</p>
               </div>
             </div>
             <div class="link-flex album-flex">
-              <img src="./mix1.jpeg" class="album-cover" />
+              <img src="mix1.jpeg" class="album-cover" />
               <div class="col-flex">
                 <p class="album-name">Workout</p>
                 <p>Playlist &#x2022; Spotify</p>
               </div>
             </div>
             <div class="link-flex album-flex">
-              <img src="./mix1.jpeg" class="album-cover" />
+              <img src="mix1.jpeg" class="album-cover" />
               <div class="col-flex">
                 <p class="album-name">Workout</p>
                 <p>Playlist &#x2022; Spotify</p>
               </div>
             </div>
             <div class="link-flex album-flex">
-              <img src="./mix1.jpeg" class="album-cover" />
+              <img src="mix1.jpeg" class="album-cover" />
               <div class="col-flex">
                 <p class="album-name">Workout</p>
                 <p>Playlist &#x2022; Spotify</p>
               </div>
             </div>
             <div class="link-flex album-flex">
-              <img src="./mix1.jpeg" class="album-cover" />
+              <img src="mix1.jpeg" class="album-cover" />
               <div class="col-flex">
                 <p class="album-name">Workout</p>
                 <p>Playlist &#x2022; Spotify</p>
@@ -162,8 +162,8 @@
       <div class="main-content">
         <div class="navbar">
           <div class="link-flex">
-            <img src="./back_navigation.png" />
-            <img src="./forward_navigation.png" />
+            <img src="back_navigation.png" />
+            <img src="forward_navigation.png" />
           </div>
           <!-- Navbar content -->
           <div class="link-flex" style="gap: 0; column-gap: 0.5rem">
@@ -174,30 +174,12 @@
         <h3>Recently Played</h3>
         <div class="cards-container">
           <div class="card">
-            <img src="./mix1.jpeg" class="card-img" />
+            <img src="mix1.jpeg" class="card-img" />
             <p class="card-name">Workout</p>
             <p class="card-description">Pop hits to keep you fresh!</p>
           </div>
           <div class="card">
-            <img src="./mix2.jpeg" class="card-img" />
-            <p class="card-name">Workout</p>
-            <p class="card-description">Pop hits to keep you fresh!</p>
-          </div>
-        </div>
-        <h3>Made For You</h3>
-        <div class="cards-container">
-          <div class="card">
-            <img src="./mix1.jpeg" class="card-img" />
-            <p class="card-name">Workout</p>
-            <p class="card-description">Pop hits to keep you fresh!</p>
-          </div>
-          <div class="card">
-            <img src="./mix2.jpeg" class="card-img" />
-            <p class="card-name">Workout</p>
-            <p class="card-description">Pop hits to keep you fresh!</p>
-          </div>
-          <div class="card">
-            <img src="./mix3.jpeg" class="card-img" />
+            <img src="mix2.jpeg" class="card-img" />
             <p class="card-name">Workout</p>
             <p class="card-description">Pop hits to keep you fresh!</p>
           </div>
@@ -205,12 +187,30 @@
         <h3>Made For You</h3>
         <div class="cards-container">
           <div class="card">
-            <img src="./mix1.jpeg" class="card-img" />
+            <img src="mix1.jpeg" class="card-img" />
             <p class="card-name">Workout</p>
             <p class="card-description">Pop hits to keep you fresh!</p>
           </div>
           <div class="card">
-            <img src="./mix2.jpeg" class="card-img" />
+            <img src="mix2.jpeg" class="card-img" />
+            <p class="card-name">Workout</p>
+            <p class="card-description">Pop hits to keep you fresh!</p>
+          </div>
+          <div class="card">
+            <img src="mix3.jpeg" class="card-img" />
+            <p class="card-name">Workout</p>
+            <p class="card-description">Pop hits to keep you fresh!</p>
+          </div>
+        </div>
+        <h3>Made For You</h3>
+        <div class="cards-container">
+          <div class="card">
+            <img src="mix1.jpeg" class="card-img" />
+            <p class="card-name">Workout</p>
+            <p class="card-description">Pop hits to keep you fresh!</p>
+          </div>
+          <div class="card">
+            <img src="mix2.jpeg" class="card-img" />
             <p class="card-name">Workout</p>
             <p class="card-description">Pop hits to keep you fresh!</p>
           </div>
@@ -222,23 +222,23 @@
           <div class="player-controls">
             <img
               style="height: 1rem; margin-right: 1rem; opacity: 0.8"
-              src="./shuffle.png"
+              src="shuffle.png"
             />
             <img
               style="height: 1rem; margin-right: 1rem; opacity: 0.8"
-              src="./previous_musicbar.png"
+              src="previous_musicbar.png"
             />
             <img
               style="height: 2rem; margin-right: 1rem"
-              src="./play_musicbar.png"
+              src="play_musicbar.png"
             />
             <img
               style="height: 1rem; margin-right: 1rem; opacity: 0.8"
-              src="./next_musicbar.png"
+              src="next_musicbar.png"
             />
             <img
               style="height: 1rem; margin-right: 1rem; opacity: 0.8"
-              src="./loop.png"
+              src="loop.png"
             />
           </div>
           <div class="player-timeline">
@@ -257,17 +257,17 @@
 
         <div class="volume-controls">
           <img
-            src="./device.png"
+            src="device.png"
             style="height: 1rem; margin-right: 1rem; opacity: 0.8"
             alt="Volume"
           />
           <img
-            src="./playlist.png"
+            src="playlist.png"
             style="height: 1rem; margin-right: 1rem; opacity: 0.8"
             alt="Settings"
           />
           <img
-            src="./music.png"
+            src="music.png"
             style="height: 1rem; margin-right: 1rem; opacity: 0.8"
             alt="Fullscreen"
           />
